--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -7,8 +7,7 @@
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body,
@@ -24,7 +23,7 @@ h5 {
 
 body {
   color: #333;
-  background-color: #fff;
+  background-color: #fffff6;
   font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "メイリオ", sans-serif;
   line-height: 1.3;
   font-size: 16px;
@@ -77,15 +76,9 @@ header {
 }
 header .header_area {
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .main_title span {
@@ -107,12 +100,8 @@ header .header_area {
   height: 100%;
   background-color: #004363;
   color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 .navi_area .navi_list {
   margin-top: 2em;
@@ -192,59 +181,73 @@ header {
   font-weight: bold;
 }
 
-.card {
-  border: 4px solid #3998c4;
-  border-radius: 5px;
-  display: block;
-  margin-top: 1em;
-}
-.card .card_head {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 0.5em 1em;
-}
-.card .card_head > div {
-  margin-right: 1em;
-}
-.card .card_detail {
-  padding: 0.5em 1em;
-  border-top: 4px solid #3998c4;
+.link {
+  box-shadow: 1px 2px #d6d6d6;
 }
 
-.event_block .date span {
-  font-size: 30px;
-  font-weight: bold;
+.card {
+  border: 1px solid #d6d6d6;
+  border-radius: 10px;
+  display: block;
+  margin-top: 0.75em;
+  padding: 0.5em 1em;
+  background-color: #fff;
 }
-.event_block .time {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.card > .card_head {
   display: flex;
+  align-items: center;
 }
-.event_block .time dl {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.event_block .time dl:nth-child(n+2) {
-  margin-left: 1em;
-}
-.event_block .time dl dt {
-  margin-right: 0.5em;
-}
-.event_block .title span {
+.card > .card_head > .main > .name_large {
+  font-size: 20px;
   font-weight: bold;
+  line-height: 2;
+}
+.card .card_detail {
+  border-top: solid 1px #d6d6d6;
+  margin-top: 0.5em;
+  padding-top: 1em;
+}
+
+.date {
+  margin-right: 2em;
+}
+.date > .top {
+  font-size: 26px;
+  font-weight: bold;
+  letter-spacing: -0.05em;
+}
+.date > .top > span {
+  display: block;
+}
+.date > .top > .day {
+  margin-left: 1.6em;
+  margin-top: -0.95em;
+  position: relative;
+}
+.date > .top > .day::before {
+  content: "";
+  position: absolute;
+  left: -0.25em;
+  top: -0.05em;
+  transform: rotate(30deg);
+  width: 1px;
+  height: 1em;
+  background-color: #333;
+  display: block;
+}
+.date > .bottom {
+  font-size: 12px;
+  line-height: 0.8;
+  text-align: center;
+}
+.date > .bottom > .week {
+  margin-left: 0.5em;
 }
 
 .bread_area {
   margin-top: 0.5em;
 }
 .bread_area ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .bread_area ul li {
@@ -256,8 +259,7 @@ header {
   position: absolute;
   right: 1em;
   top: 50%;
-  -webkit-transform: translate(50%, -50%);
-          transform: translate(50%, -50%);
+  transform: translate(50%, -50%);
   width: 0;
   height: 0;
   border-style: solid;
@@ -270,11 +272,7 @@ header {
 
 .page_area {
   margin-top: 1em;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 /*# sourceMappingURL=style.css.map */
