--- a/client/src/css/style.scss
+++ b/client/src/css/style.scss
@@ -26,6 +26,14 @@ header {
   }
 }
 
+.sub_title {
+  span {
+    font-size: 18px;
+    font-weight: bold;
+    color: #797979;
+  }
+}
+
 .select_box {
   select {
     cursor: pointer;
@@ -119,14 +127,16 @@ header {
   margin-top: 0.75em;
   padding: 0.5em 1em;
   background-color: #fff;
-  > .card_head {
+  .card_head {
     display: flex;
     align-items: center;
     > .main {
+      > .name_small {
+        line-height: 1.6;
+      }
       > .name_large {
         font-size: 20px;
         font-weight: bold;
-        line-height: 2;
       }
     }
   }
@@ -141,7 +151,7 @@ header {
 .date {
   margin-right: 2em;
   > .top {
-    font-size: 26px;
+    font-size: 24px;
     font-weight: bold;
     letter-spacing: -0.05em;
     > span {
@@ -172,6 +182,14 @@ header {
       margin-left: 0.5em;
     }
   }
+}
+
+textarea {
+  width: 100%;
+}
+
+.place_event {
+  margin-top: 2em;
 }
 
 .bread_area {
